--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -11,6 +11,7 @@ nav {
     justify-content: start;
     list-style-type: none;
     padding: 0;
+    margin-bottom: 0;
     @media screen and (max-width:1020px) {
       width: 100vw;
       margin: 0;
