--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li id="logo">Y</li>
     <li id="title">Hacker News</li>
-    <li [routerLink]="['']">new</li>
+    <li [routerLink]="['/news']">new</li>
     <li>past</li>
     <li>comments</li>
     <li>ask</li>
