--- a/src/app/components/story/story.component.html
+++ b/src/app/components/story/story.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="current">
+<!-- <div *ngIf="current">
   <span class="arrow-up"></span>
   {{ current.title }}
   <br />
   <p>640 points by <a href="#">{{ current.by }}</a> 5 hours ago | hide | 263 comments</p>
-</div>
+</div> -->
 <!-- <a href="#">({{ current.url }})</a> -->
