--- a/src/app/pages/stories/stories.component.scss
+++ b/src/app/pages/stories/stories.component.scss
@@ -7,8 +7,12 @@
   }
   .row {
     display: flex;
-    justify-content: start;
+    justify-content: stretch;
     align-items: center;
+    width: 100%;
+    // @media screen and (max-width:1020px) {
+    //   width: 100vw;
+    // }
   }
   span {
     color: #ccc;
