--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,12 +2,12 @@
   <ul>
     <li id="logo">Y</li>
     <li id="title">Hacker News</li>
-    <li [routerLink]="['/news']">new</li>
-    <li>past</li>
-    <li>comments</li>
-    <li>ask</li>
+    <li routerLink="news">new</li>
+    <!-- <li>past</li> -->
+    <li routerLink="comments">comments</li>
+    <!-- <li>ask</li>
     <li>show</li>
     <li>jobs</li>
-    <li>submit</li>
+    <li>submit</li> -->
   </ul>
 </nav>
