--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,7 +1,7 @@
 nav {
   background: #FF6600;
   width: 80vw;
-  margin: auto;
+  margin: 0 auto 1em;
 
   @media screen and (max-width:1020px) {
     width: 100vw;
@@ -33,7 +33,7 @@ nav {
   padding: .2em;
 }
 #title {
-  font-size: larger;
+  font-size: 1em;
   font-weight: bold;
   border-left: none;
 }
