--- a/src/app/components/story/story.component.html
+++ b/src/app/components/story/story.component.html
@@ -2,7 +2,7 @@
   <span class="arrow-up"></span>
   <div class="card-body">
     <a class="card-title" [href]="story.url" target="_blank">{{ story.title }}</a>
-    <p>
+    <p class="card-text">
       {{ story.score }} points by
       <a class="sub-info" >{{ story.by }} </a>
       <a class="sub-info" >{{ story.time | date: 'HH' }} hours ago</a> |
