--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,16 +1,18 @@
-<footer>
-  <ul>
-    <li>Guidelines</li>
-    <li>FAQ</li>
-    <li>Support</li>
-    <li>API</li>
-    <li>Secury</li>
-    <li>Lists</li>
-    <li>Bookmarklet</li>
-    <li>Legal</li>
-    <li>Apply to YC</li>
-    <li>contact</li>
+<footer class="footer">
+  <ul class="list">
+    <li class="item">Guidelines</li>
+    <li class="item">FAQ</li>
+    <li class="item">Support</li>
+    <li class="item">API</li>
+    <li class="item">Secury</li>
+    <li class="item">Lists</li>
+    <li class="item">Bookmarklet</li>
+    <li class="item">Legal</li>
+    <li class="item">Apply to YC</li>
+    <li class="item">contact</li>
   </ul>
-  <label for="search">Search: </label>
-  <input type="text" name="search" id="search">
+  <div class="search-form">
+    <label for="search">Search: </label>
+    <input type="text" name="search" id="search">
+  </div>
 </footer>
