--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
-<nav>
-  <ul>
-    <li id="logo">Y</li>
-    <li id="title">Hacker News</li>
-    <li routerLink="news">new</li>
+<nav class="nav">
+  <ul class="list">
+    <li class="item logo">Y</li>
+    <li class="item title">Hacker News</li>
+    <li class="item" routerLink="news">new</li>
   </ul>
 </nav>
