--- a/src/app/pages/comments/comments.component.html
+++ b/src/app/pages/comments/comments.component.html
@@ -2,7 +2,7 @@
   <app-story [story]="currentStory"></app-story>
   <textarea class="text-box" name="comment" id="comment" cols="50" rows="5"></textarea>
   <button class="btn">add comment</button>
-  <!-- <div *ngFor="let comment of currentStory$ | async">
+  <div *ngFor="let comment of currentStory.comments">
     <app-comment [comment]="comment"></app-comment>
-  </div> -->
+  </div>
 </div>
