--- a/src/app/components/comment/comment.component.scss
+++ b/src/app/components/comment/comment.component.scss
@@ -1,6 +1,10 @@
 .comment-container {
-  padding: 1em;
+  padding: 0 1em;
 
+  @media screen and (max-width:1020px) {
+    max-width: 70%;
+    padding-left: 2em;
+  }
   .arrow-up {
     position: relative;
     top: -.3em;
@@ -11,29 +15,33 @@
     margin-right: .3em;
     border-bottom: 5px solid #ccc;
   }
-
-  div {
-    width: 100%;
-    max-width: 100vw;
-    .sub-info {
-      font-size: .8em;
-      color: rgb(160, 160, 160);
-    }
-  }
-  p {
-    margin: 0;
-    padding: 1em;
-    font-size: .8em;
+  .head {
     color: rgb(160, 160, 160);
-    margin-left: 1em;
+    width: 100%;
   }
-
+  .more-btn {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    color: rgb(160, 160, 160);
+    font-size: 1em;
+  }
+  .arrow-up {
+    position: relative;
+    top: .3em;
+  }
   .card-title {
-    color: #000;
+    margin: 0;
+    font-size: .8em;
+    margin-left: 1.5em;
+    width: 100%;
   }
   .text {
-    margin: 1em;
-    padding-left: 5em;
+    @extend .card-title;
+    margin-top: 0.5em;
     line-height: 1.5em;
+    color: #000;
+    min-width: 20em;
+    max-width: 70%;
   }
 }
