--- a/src/app/components/story/story.component.scss
+++ b/src/app/components/story/story.component.scss
@@ -1,9 +1,11 @@
 
 .card {
-  width: 100%;
-  max-width: 100vw;
+  width: 80%;
+  min-width: 20em;
+  max-width: 50em;
   display: flex;
   align-items: center;
+  margin-left: 1em;
 
   .arrow-up {
     position: relative;
@@ -19,21 +21,23 @@
   .card-body {
     margin: 1em 0 0 .2em;
     align-self: end;
+    @media screen and (max-width:1020px) {
+      padding-right: 2em;
+    }
   }
 
   .card-title {
     color: #000;
   }
 
+  .card-text {
+    margin: 0;
+    padding: 0;
+    font-size: .8em;
+    color: rgb(160, 160, 160);
+  }
   .sub-info {
     font-size: .8em;
     color: rgb(160, 160, 160);
   }
-}
-
-p {
-  margin: 0;
-  padding: 0;
-  font-size: .8em;
-  color: rgb(160, 160, 160);
 }
