--- a/src/app/pages/comments/comments.component.scss
+++ b/src/app/pages/comments/comments.component.scss
@@ -1,17 +1,19 @@
 .layout {
   background: #F6F6EF;
-  width: 80vw;
-  margin: auto;
-  padding: .5em 0 0 .5em;
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 2em;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   @media screen and (max-width:1020px) {
-    width: 100vw;
+    width: 100%;
   }
   .text-box {
     margin: 1.5em 1em;
+    width: 30%;
+    min-width: 20em;
   }
   .btn {
     margin-left: 1em;
