--- a/src/app/components/story/story.component.scss
+++ b/src/app/components/story/story.component.scss
@@ -24,6 +24,10 @@
     @media screen and (max-width:1020px) {
       padding-right: 2em;
     }
+    @media screen and (max-width:720px) {
+      font-size: 1em;
+      width: auto;
+    }
   }
 
   .card-title {
