Building pipe for slice url string.

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -3,7 +3,7 @@
     <li class="item">Guidelines</li>
     <li class="item">FAQ</li>
     <li class="item">Support</li>
-    <li class="item">API</li>
+    <li class="item gray">API</li>
     <li class="item">Secury</li>
     <li class="item">Lists</li>
     <li class="item">Bookmarklet</li>
@@ -12,7 +12,7 @@
     <li class="item">contact</li>
   </ul>
   <div class="search-form">
-    <label for="search">Search: </label>
+    <label for="search gray">Search: </label>
     <input type="text" name="search" id="search">
   </div>
 </footer>
