--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -31,5 +31,9 @@
   }
   .search-form {
     margin: 2em auto;
+    color: rgb(160, 160, 160);
+  }
+  .gray {
+    color: rgb(160, 160, 160);
   }
 }
