--- a/src/app/components/story/story.component.scss
+++ b/src/app/components/story/story.component.scss
@@ -28,6 +28,10 @@
       font-size: 1em;
       width: auto;
     }
+    .card-link {
+      color: rgb(160, 160, 160);
+      font-size: .8em;
+    }
   }
 
   .card-title {
@@ -35,10 +39,10 @@
   }
 
   .card-text {
+    @extend .card-link;
     margin: 0;
     padding: 0;
-    font-size: .8em;
-    color: rgb(160, 160, 160);
+
   }
   .sub-info {
     font-size: .8em;
